# aide

./: .gitignore  Cargo.toml  README.md  output.txt
.claude/skills/aide-tasks/: SKILL.md
.claude/skills/amit-tasks/: SKILL.md
aide/: Cargo.toml
aide-cli/: Cargo.toml
aide/src/: job.rs  logging.rs  main.rs  pickup.rs  poll.rs  runtime.rs  scanner.rs  status_writer.rs  statusline.rs  temp.rs  tmux.rs  validator.rs  watcher.rs
aide/src/agent/: codex.rs  mod.rs
amit/: Cargo.toml
amit/src/: main.rs  pickup.rs  poll.rs  scanner.rs  status_writer.rs  temp.rs  tmux.rs  watcher.rs
amit/src/agent/: codex.rs  mod.rs
src/: job.rs  logging.rs  runtime.rs  validator.rs
