[package] 
name = "amit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
toml_edit = "0.22"
